--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ text-align: center;
 .txt2{
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font: size 2px; ;
+  font: size 2px;
 
   
 }
