--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ text-align: center;
   margin-inline: 38%;
 }
 
-.txt2{
+.texto{
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font: size 2px;
+  font-size: medium;
 
   
 }
