--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ text-align: center;
   margin-inline: 38%;
 }
 
-.texto{
+.texto2{
   text-align: center;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   font-size: medium;
